k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qa-toolbox
  labels:
    name: qa-toolbox
    app: qa-toolbox
